collapse, home, a propos corrections, création component rating et incorporation a la page fiche logement

--- a/src/style/components/Card/style.scss
+++ b/src/style/components/Card/style.scss
@@ -1,8 +1,6 @@
 @use '../../variables' as *;
 
 .card {
-  margin-left: 55px;
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -13,6 +11,9 @@
   background-position: center;
   z-index: 0;
 
+  a{
+    text-decoration: none;
+  }
   .overlay {
     position: absolute;
     top: 0;
@@ -31,10 +32,11 @@
   }
 
   h2 {
+    position: relative;
     font-size: $small-font-size;
     font-weight: 700;
+    padding-left: 20px;
     color: white;
     z-index: 2;
-    padding-left: 20px;
   }
 }
