--- a/src/style/pages/Home/style.scss
+++ b/src/style/pages/Home/style.scss
@@ -6,11 +6,12 @@
   gap: 50px;
 
   .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 0;
-    padding-bottom: 55px;
-    padding-top: 5px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+    justify-self: stretch;
+    grid-gap: 55px;
+    justify-items: start;
+    padding: 55px;
     margin: 0;
     background-color: #f6f6f6;
     border-radius: 25px;
